--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-storages==1.11.1
 paramiko==2.7.2
 pycparser==2.20
 PyNaCl==1.4.0
+python-dotenv==0.19.0
 pytz==2021.1
 six==1.16.0
 sqlparse==0.4.2
