--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ cffi==1.14.6
 cryptography==3.4.8
 Django==3.2.7
 django-storages==1.11.1
+gunicorn==20.1.0
 paramiko==2.7.2
 Pillow==8.3.2
+psycopg2-binary==2.9.1
 pycparser==2.20
 PyNaCl==1.4.0
 python-dotenv==0.19.0
@@ -13,4 +15,3 @@ pytz==2021.1
 six==1.16.0
 sqlparse==0.4.2
 Unidecode==1.3.1
-psycopg2-binary==2.9.1
