--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: "3.9"
 
 services:
+  nginx:
+    build: ./nginx
+    ports:
+      - 1337:80
+    depends_on:
+      - web
+
   web:
     build: .
     command: gunicorn matkonim2.wsgi:application --bind 0.0.0.0:8000
