--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: "3.9"
 services:
   nginx:
     build: ./nginx
+    volumes:
+      - static_volume:/home/app/web/staticfiles
+      - media_volume:/home/app/web/uploads
     ports:
       - 1337:80
     depends_on:
@@ -11,6 +14,9 @@ services:
   web:
     build: .
     command: gunicorn matkonim2.wsgi:application --bind 0.0.0.0:8000
+    volumes:
+      - static_volume:/home/app/web/staticfiles
+      - media_volume:/home/app/web/uploads
     ports:
       - "8000:8000"
     env_file:
@@ -27,3 +33,6 @@ services:
 
 volumes:
   postgres_data:
+  static_volume:
+  media_volume:
+
