--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,4 +13,12 @@ server {
         proxy_redirect off;
     }
 
+    location /static/ {
+        alias /home/app/web/staticfiles/;
+    }
+
+    location /uploads/ {
+        alias /home/app/web/uploads/;
+    }
+
 }
