--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
   web:
     build: .
-    command: gunicorn matkonim2.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn --workers=5 --threads=5 matkonim2.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - static_volume:/home/app/web/staticfiles
       - media_volume:/home/app/web/uploads
